# Custom-Interpreter

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
core/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  scope.cpp  scope.h  value.cpp  value.h
core/main/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
util/: errors.h  functions.cpp  functions.h  utf8string.cpp  utf8string.h
